--- a/app/views/layouts/navbar.html.erb
+++ b/app/views/layouts/navbar.html.erb
@@ -8,7 +8,14 @@
     <div id="navbar" class="navbar navbar-expand-lg flex-shrink-0 flex-wrap py-2 px-2 pe-md-3">
         <%= render 'brand' %>
         <%= yield :navbar_items %>
-        <%= render 'float_nav' %>
+        <ul id="icon-nav" class="navbar-nav align-items-center flex-fill">
+            <% if current_user.senior? %>
+            <div class="flex-fill">
+                <%= render partial: 'search' %>
+            </div>
+            <% end %>
+            <%= render partial: 'hands_menu' %>
+        </ul>
         <% if !authenticated? %>
         <ul id="icon-nav" class="navbar-nav ms-auto">
             <li class="nav-item"><%= link_to(t(:sign_in), session_login_path, class:"snav-link", data: { turbo: false })%></li>
