--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -418,7 +418,7 @@
 
 //****************************************************************************
 
-#ama-nav .dropdown-menu
+#ama-menu
 {
 	min-width:300px;
 }
