--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -22,10 +22,10 @@
 			<%= render partial: 'schedule_permissions', locals: { schedules: user.schedules, user: user } %>
 			</div>
 			<div class="btn-group">
-				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button id="addGroupDropdown" type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
 					<%= bootstrap_icon 'plus' %>
 				</button>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu" aria-labelledby="addGroupDropdown">
 					<% @schedules.each do |schedule| %>
 					<%= button_to schedule.name, admin_user_add_schedule_permission_path(user_id: user.id, schedule_id: schedule.id), method: :post, class:"dropdown-item", style: "font-size: smaller !important;" %>
 					<% end %>
@@ -39,10 +39,10 @@
 			<%= render partial: 'group_permissions', locals: { groups: user.groups, user: user } %>
 			</div>
 			<div class="btn-group">
-				<button type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button id="addScheduleDropdown" type="button" class="btn btn-light btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
 					<%= bootstrap_icon 'plus' %>
 				</button>
-				<ul class="dropdown-menu">
+				<ul class="dropdown-menu" aria-labelledby="addScheduleDropdown">
 					<% @groups.each do |group| %>
 					<%= button_to "#{group.schedule.name} - #{group.name}", admin_user_add_group_permission_path(user_id: user.id, group_id: group.id), method: :post, class:"dropdown-item", style: "font-size: smaller !important;" %>
 					<% end %>
