--- a/app/views/application/_hands_menu.html.erb
+++ b/app/views/application/_hands_menu.html.erb
@@ -1,10 +1,10 @@
 <% if Settings.hands_allow && current_user.valid_profile? %>
 
-<li class="nav-item dropdown" id="ama-nav">
-    <a href="#" id="ama-dd" class="nav-link dropdown-toggle rounded-pill" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+<li class="nav-item dropdown">
+    <a href="#" id="ama-dd" class="nav-link dropdown-toggle rounded-pill" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
         <%= bootstrap_icon "question-circle-fill", size: '24x24', style: 'vertical-align:-0.255em;' %><%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %>
     </a>
-    <div class="dropdown-menu dropdown-menu-end" id="ama-menu">
+    <div class="dropdown-menu dropdown-menu-end" id="ama-menu" aria-labelledby="ama-dd">
         <%= render 'ama' %>
     </div>
 </li>
@@ -13,17 +13,18 @@
     <script>
         Rails.ajax({
             url: '<%= hands_raise_path %>',
-            type: 'get'
+            type: 'get',
+            success: () => (new bootstrap.Dropdown(document.getElementById('ama-dd'))).show()
         });
     </script>
 <% else %>
     <script>
-    document.getElementById('ama-nav').addEventListener('show.bs.dropdown', function(e) {
+    document.getElementById('ama-dd').addEventListener('show.bs.dropdown', function(e) {
         Rails.ajax({
             url: '<%= hands_raise_path %>',
             type: 'get'
         });
-    })
+    }, { once: true} )
     </script>
 <% end %>
 
