--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -9,8 +9,8 @@
         <% psets.each_with_index do |(pset, submit), index| %>
         <th style="<%= 'border-left: 1.5px solid black;' if index==0 %>">
             <div class="dropdown">
-                <button class="btn px-1 py-0 btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                <ul class="dropdown-menu dropdown-menu-end">
+                <button id="overviewsTableColumnDropdown" class="btn px-1 py-0 btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="overviewsTableColumnDropdown">
                     <li>
                         <%= link_to "Publish all", publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, class: 'small dropdown-item' %>
                     </li>
