--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,5 +1,5 @@
 <div id="search" class="flex-fill dropdown autocomplete">
-	<form id="student-search-form" action="<%= search_users_path %>" method="get" data-remote="true">
+	<form id="student-search-form" data-bs-toggle="dropdown" action="<%= search_users_path %>" method="get" data-remote="true">
 		<input id="student-search" name="text" type="text" autocomplete="off" class="form-control form-control-sm border-secondary" placeholder="Find student" aria-label="Find student">
 	</form>
 	<div id="search-results" class="dropdown-menu autocomplete-results w-100" role="menu"></div>
