--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -13,7 +13,7 @@
         </ul>
         <% end %>
     </div>
-    <% if current_user.senior? %>
+    <% if current_user.staff? %>
     <div class="container-fluid px-0 mt-2 flex-fill">
         <%= render partial: 'search' %>
     </div>
