--- a/app/views/items/_note.html.erb
+++ b/app/views/items/_note.html.erb
@@ -10,7 +10,7 @@
 		<small class="author fw-bold"><%= note.author_name %></small>
 		<small class="ms-3">
 			<%= date_span_with_title(note.created_at)%>
-			<% if !note.log %>
+			<% if !note.log && current_user.senior? %>
 			<%= link_to bootstrap_icon('pen', height: 16, width: 16, style: 'vertical-align: sub;'), edit_note_path(note) %>
 			<% end %>
 		</small>
