Zebra streepjes op de overview tabel

--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -1,4 +1,4 @@
-<table id="grade-table" class="table table-sm table-borderless table-responsive">
+<table id="grade-table" class="table table-sm table-borderless table-responsive table-striped">
 
     <% if current_user.admin? %>
     <tr class="sticky-1">
