--- a/app/views/overviews/overview.html.erb
+++ b/app/views/overviews/overview.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'tabs' %>
-<%= render partial: 'table', locals: { groups: @users, psets: @psets } %>
+<%= render partial: 'table', locals: { groups: @grouped_users, psets: @psets } %>
 
 <script type="text/javascript" charset="utf-8">
 	enableTooltips();
