--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -68,12 +68,22 @@
         </td>
         <td class="bar">
             <% if current_user.senior? %>
-            <%= user.attendance %><br>
+            <%= user.attendance %>
+            <% if Settings.hands_allow %><br>
             <%= user.hands_count %> hands,
             <%= user.hands_duration_count %> mins
             <% end %>
+            <% end %>
         </td>
-        <%= render partial: 'buttons', locals: { user: user, template: @overview } %>
+        <% @overview.each do |name, psets| %>
+            <% psets.each_with_index do |(pset, submit), index| %>
+                <td class="<%= grade_bg_type(@subs[[pset.id, user.id]].grade) if @subs[[pset.id, user.id]].present? %>"
+                    style="<%= 'border-left: 1.5px solid black;' if index==0 %>">
+                    <%= grade_button(user, pset, @subs[[pset.id, user.id]], true, true) %>
+                </td>
+            <% end %>
+        <% end %>
+        
     </tr>
     <% end %>
     <% end %>
