--- a/app/views/grading/_file_panels.html.erb
+++ b/app/views/grading/_file_panels.html.erb
@@ -9,3 +9,9 @@
 	<code><pre><%= @submit.formatted_auto_feedback %></code></pre>
 </div>
 <% end %>
+
+<% if @submit.has_run_log? %>
+<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-log" role="tabpanel" aria-labelledby="home-tab">
+	<code><pre><%= @submit.formatted_run_log %></code></pre>
+</div>
+<% end %>
