--- a/app/views/grading/_file_tabs.html.erb
+++ b/app/views/grading/_file_tabs.html.erb
@@ -9,3 +9,9 @@
 	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-bs-toggle="tab" href="#file-check" role="tab">Check</a>
 </li>
 <% end %>
+
+<% if @submit.has_run_log? %>
+<li class="nav-item">
+	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-bs-toggle="tab" href="#file-log" role="tab">Log</a>
+</li>
+<% end %>
