--- a/app/assets/stylesheets/includes/toc.scss
+++ b/app/assets/stylesheets/includes/toc.scss
@@ -1,8 +1,8 @@
 .room-for-toc #content #markdown-toc
 {
 	width:12rem;
-	float:right;
-	margin-right:-18rem;
+	float:left;
+	margin-left:calc(100% + 4rem);
 	padding:1rem;
 	border-left:1px solid #64A2C0;
 	position:sticky;
