--- a/app/assets/stylesheets/includes/toc.scss
+++ b/app/assets/stylesheets/includes/toc.scss
@@ -4,7 +4,7 @@
 	float:left;
 	margin-left:calc(100% + 4rem);
 	padding:1rem;
-	border-left:1px solid #64A2C0;
+//	border-left:1px solid #64A2C0;
 	position:sticky;
 	position:-webkit-sticky;
 	top:1em;
