--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -87,7 +87,7 @@ section, .sectionbody .content
 		background-image: linear-gradient(120deg, rgba(132,250,176, 0.3) 0%, #8fd3f4 100%);
 	}
 
-	blockquote p:last-child
+	blockquote > *:last-child
 	{
 		margin-bottom: 0;
 	}
