--- a/app/assets/stylesheets/includes/print.scss
+++ b/app/assets/stylesheets/includes/print.scss
@@ -13,7 +13,7 @@
 	
 	#sidebar, footer, ul.nav, #content > h1, iframe,
 	#schedule-column, #comments-column, .embed,
-	section#submit-content, #float-nav, .alert
+	section#submit-content, #float-nav, .alert, #submit-button
 	{
 		display:none !important;
 	}
