heading styles for nav

--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -323,6 +323,16 @@
 
 //****************************************************************************
 
+#sidebar #schedule > .nav > .nav-text
+{
+    font-weight:600;
+}
+
+#sidebar #schedule > .nav .nav .nav-text
+{
+    color:#6C8DAF;
+}
+
 #sidebar .materials a
 {
 	padding:0.4rem;
