add current dates to item boxes + slight layout change for grade

--- a/app/views/home/_alert.html.erb
+++ b/app/views/home/_alert.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
 	<div class="card-body p-lg-5">
-		<small><%= date_span_with_title(alert.created_at)%></small>
+		<small><%= date_span(alert.created_at)%></small>
 		<h4 class="card-title"><%= alert.title %></h4>
 		<%= simple_markdown(alert.body) %>
 	</div>
