--- a/app/views/items/_hand.html.erb
+++ b/app/views/items/_hand.html.erb
@@ -1,4 +1,4 @@
-<p><small><%= date_span_with_title(hand.created_at)%></small></p>
+<p><small><%= date_span(hand.created_at)%></small></p>
 <p>
 	<span class="bubble">❓<%= hand.help_question %></span>
 	<% if hand.assist %>
