--- a/app/views/items/_note.html.erb
+++ b/app/views/items/_note.html.erb
@@ -2,14 +2,14 @@
 <% if note.log %>
 <div class="small">
 	<strong><%= note.text %></strong> by
-	<%= note.author_name %> (<%= date_span_with_title(note.created_at)%>)
+	<%= note.author_name %> (<%= date_span(note.created_at)%>)
 </div>
 <% else %>
 <div class=" ">
 	<div class="text-dark d-flex justify-content-between pb-2">
 		<small class="author fw-bold"><%= note.author_name %></small>
 		<small class="ms-3">
-			<%= date_span_with_title(note.created_at)%>
+			<%= date_span(note.created_at, time_ago=false)%>
 			<% if !note.log && current_user.senior? %>
 			<%= link_to bootstrap_icon('pen', height: 16, width: 16, style: 'vertical-align: sub;'), edit_note_path(note) %>
 			<% end %>
