additional change for date_span helper

--- a/app/views/items/_note.html.erb
+++ b/app/views/items/_note.html.erb
@@ -9,7 +9,7 @@
 	<div class="text-dark d-flex justify-content-between pb-2">
 		<small class="author fw-bold"><%= note.author_name %></small>
 		<small class="ms-3">
-			<%= date_span(note.created_at, time_ago=false)%>
+			<%= date_span(note.created_at)%>
 			<% if !note.log && current_user.senior? %>
 			<%= link_to bootstrap_icon('pen', height: 16, width: 16, style: 'vertical-align: sub;'), edit_note_path(note) %>
 			<% end %>
