upgrade to rails 7, upgrade rails-settings-cached

--- a/app/views/users/_hands_overview.html.erb
+++ b/app/views/users/_hands_overview.html.erb
@@ -1,7 +1,7 @@
 <table class="table">
 	<% hands_overview.each do |h| %>
 	<tr>
-		<td><%= h[1].to_s(:short) %></td>
+		<td><%= h[1].to_formatted_s(:short) %></td>
 		<td><%= h[2].round %> min</td>
 		<td><%= h[3].split.first %></td>
 	</tr>
