--- a/app/views/admin/site/_git.html.erb
+++ b/app/views/admin/site/_git.html.erb
@@ -6,12 +6,12 @@
 <%= form_tag(admin_site_set_git_repo_path, class:'form d-flex') do %>
 <div class=" flex-fill">
 	<label for="repo_url">Repo URL</label>
-	<%= text_field_tag 'repo_url', Settings['git_repo'], required: true, class: 'form-control' %>
+	<%= text_field_tag 'repo_url', Settings.git_repo, required: true, class: 'form-control' %>
 </div>
 <div class=" ms-3">
 	<label for="repo_branch">Branch</label>
 	<div class="input-group">
-		<%= text_field_tag 'repo_branch', Settings['git_branch'], class: 'form-control' %>
+		<%= text_field_tag 'repo_branch', Settings.git_branch, class: 'form-control' %>
 		<%= submit_tag 'Clone', class:'btn btn-primary' %>
 	</div>
 </div>
