--- a/app/views/overviews/_tabs.html.erb
+++ b/app/views/overviews/_tabs.html.erb
@@ -43,7 +43,7 @@
 				<%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_schedule_submits_path(schedule_slug: @selected_schedule), class:"dropdown-item", target: 'modal'  %>
 				<% end %>
 				<% end %>
-				<% if current_user.admin? && Grading::FinalGradeAssigner.available? %>
+				<% if current_user.admin? && User::FinalGradeAssigner.available? %>
 				<div class="dropdown-divider"></div>
 				<%= link_to 'Calculate all final grades', assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
 				<% GradingConfig.final_grade_names.each do |grade_name| %>
