--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -13,7 +13,7 @@
     }
     ) do %>
 
-<% if @submit || (@page.pset && Settings.site_enabled && Webdav::Client.available? && logged_in?) %>
+<% if @submit || (@page.pset && Settings.site_enabled && Submit::Webdav::Client.available? && logged_in?) %>
 <div id="submit-button">
     <button class="btn btn-primary" type="button" onclick="window.scrollTo(0,document.body.scrollHeight);">
     <% if @submit && @submit.submitted_at %>
