--- a/app/views/submissions/_grades_overview.html.erb
+++ b/app/views/submissions/_grades_overview.html.erb
@@ -35,7 +35,7 @@
 				<%# Print calculated grade for this submit if it is not unpublished or hidden. %>
 				<%# Else, print a dash. %>
 				<% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_calculated'] %>
-				<td><%= translate_grade(@grades_by_pset[submit].any_final_grade) %></td>
+				<td><%= translate_grade(@grades_by_pset[submit].assigned_grade) %></td>
 				<% else %>
 				<td>-</td>
 				<% end %>
