--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,33 +3,31 @@
 <%= html_tag_with_language do %>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<%= csrf_meta_tags %>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <%= csrf_meta_tags %>
 
-	<title><%= title %></title>
+    <title><%= title %></title>
 
-	<%= stylesheet_link_tag    'application', :media => 'all' %>
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
+    <%= stylesheet_link_tag    'application', :media => 'all' %>
+    <%= javascript_include_tag 'legacy-application', 'data-turbolinks-track' => 'reload' %>
 
-	<% if ['home', 'page', 'profile'].include?(controller_name) && Settings.pages_enable_math %>
-	<%= javascript_include_tag 'optional/math' %>
-	<%= javascript_include_tag 'https://polyfill.io/v3/polyfill.min.js?features=es6' %>
-	<%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js', { async: true, id: 'MathJax-script' } %>
-	<% end %>
+    <% if ['home', 'page', 'profile'].include?(controller_name) && Settings.pages_enable_math %>
+    <%= javascript_include_tag 'optional/math' %>
+    <%= javascript_include_tag 'https://polyfill.io/v3/polyfill.min.js?features=es6' %>
+    <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js', { async: true, id: 'MathJax-script' } %>
+    <% end %>
 
-	<%= turbo_include_tags %>
-	<%= stimulus_include_tags %>
+    <link rel="icon" type="image/png" href="/images/minor.png" />
 
-	<link rel="icon" type="image/png" href="/images/minor.png" />
-
-	<%= yield(:meta) %>
+    <%= yield(:meta) %>
+    <%= javascript_importmap_tags %>
 </head>
 
 <body class="<%= @body_class || controller.controller_name %>">
-	<%= content_for?(:body) ? yield(:body) : yield %>
-	<%= render partial: "modal_browser" %>
+    <%= content_for?(:body) ? yield(:body) : yield %>
+    <%= render partial: "modal_browser" %>
 </body>
 
 <% end %>
