combine auth methods

--- a/app/views/admin/users/create.html.erb
+++ b/app/views/admin/users/create.html.erb
@@ -2,6 +2,4 @@
 <h1>Add user</h1>
 <% end %>
 
-<p>Your new student can now login using this URL:</p>
-
-<p><%= @url %></p>
+<p>Your new student can now login by e-mail.</p>
