--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -66,7 +66,9 @@
 <% end%>
 
 <% if !authenticated? %>
+<% if Auth::OpenController.available? %>
 <%= menu_link 'Login via UvA', auth_open_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
+<% end %>
 <%= menu_link 'Login via mail', auth_mail_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
 <% else %>
 <%= menu_link 'Logout', auth_session_logout_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
