--- a/app/views/admin/course/index.html.erb
+++ b/app/views/admin/course/index.html.erb
@@ -4,7 +4,9 @@
 
 <%= render partial: 'stats', layout: 'modal_card', locals: { title: 'Statistics', subtitle: nil }%>
 
-<%= render partial: 'new_user', layout: 'modal_card', locals: { title: 'Create a temporary user', subtitle: nil }%>
+<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Registration options', subtitle: nil }%>
+
+<%= render partial: 'new_user', layout: 'modal_card', locals: { title: 'Invite a user', subtitle: nil }%>
 
 <% if Schedule.any? %>
 <%= render partial: 'registration', layout: 'modal_card', locals: { title: 'Schedule registration', subtitle: 'Allow students to register for the following schedules' } %>
