--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -69,7 +69,9 @@
 <% if Auth::OpenController.available? %>
 <%= menu_link 'Login via UvA', auth_open_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
 <% end %>
+<% if Auth::MailController.available? %>
 <%= menu_link 'Login via mail', auth_mail_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
+<% end %>
 <% else %>
 <%= menu_link 'Logout', auth_session_logout_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
 <% end %>
