--- a/app/views/application/_brand.html.erb
+++ b/app/views/application/_brand.html.erb
@@ -8,7 +8,7 @@
 
 		<% if logged_in? %>
 		<small class="fw-normal fs-6">
-			<%= current_user && current_user.name || session[:cas_user] %>
+			<%= current_user.try(:name) %>
 			<%= '&middot;'.html_safe if current_user && user_designation %>
 			<%= user_designation %>
 		</small>
