--- a/app/views/schedule/to_export.html.erb
+++ b/app/views/schedule/to_export.html.erb
@@ -8,7 +8,7 @@
 			<%= g.user.group.name if g.user and g.user.group %>
 		</td>
 		<td>
-			<%= g.user.login_id if g.user %>
+			<%= g.user.defacto_student_identifier if g.user %>
 		</td>
 		<td>
 			<%= g.user_name %>
