--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,6 +4,7 @@
 		<p>
 			<%= f.text_field :name,               placeholder: 'Full name', autocomplete: 'off' %>
 			<%= f.text_field :mail,               placeholder: 'E-mail',    autocomplete: 'off' %><br>
+			<%= f.text_field :student_number,     placeholder: 'Student ID',autocomplete: 'off' %><br>
 			<%= f.text_field :status_description, placeholder: 'Status',    autocomplete: 'off' %>
 		</p>
 		<p>
