--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -5,7 +5,7 @@
         </button>
         <%= render 'brand' %>
         <ul class="navbar-nav d-flex">
-            <% if authenticated? %>
+            <% if logged_in? %>
             <%= render 'hands_menu' %>
             <% end %>
             <%= render 'menu' %>
