--- a/app/views/application/_brand.html.erb
+++ b/app/views/application/_brand.html.erb
@@ -1,18 +1,20 @@
 <%# min-width:0 is to allow the div to dictate the width for flexboxed children %>
 <a href="/" class="navbar-brand d-flex align-items-center p-0 me-auto fw-bold flex-fill" style="min-width:0;">
 
-	<%= bootstrap_icon "terminal", class: "rounded me-2 flex-shrink-0 p-1 d-none d-md-block", width:32, height:32, style: 'vertical-align:bottom;' %>
+    <%= bootstrap_icon "terminal", class: "rounded me-2 flex-shrink-0 p-1 d-none d-md-block", width:32, height:32, style: 'vertical-align:bottom;' %>
 
-	<div id="course-title" class="d-flex flex-column text-truncate">
-		<span><%= Course.long_name %></span>
+    <div id="course-title" class="d-flex flex-column text-truncate">
+        <span><%= Course.long_name %></span>
 
-		<% if logged_in? %>
-		<small class="fw-normal fs-6">
-			<%= current_user.try(:name) %>
-			<%= '&middot;'.html_safe if current_user && user_designation %>
-			<%= user_designation %>
-		</small>
-		<% end %>
-	</div>
+        <% if logged_in? %>
+        <small class="fw-normal fs-6">
+            <%= current_user.name %>
+            <% if current_user.designation %>
+            <%= '&middot;'.html_safe %>
+            <%= current_user.designation %>
+            <% end %>
+        </small>
+        <% end %>
+    </div>
 
 </a>
