--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -1,7 +1,8 @@
-<% content_for :content do %>
+<% content_for :body do %>
+<%= render "alerts" %>
 <div class="container" style="margin-top:2em;">
-	<%= yield %>
+    <%= yield %>
 </div>
-<%= render 'footer' %>
+<%#= render 'footer' %>
 <% end %>
 <%= render template: "layouts/application" %>
