--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,42 +1,46 @@
 <%= form_tag '/profile/save', class:'form-horizontal' do |f| %>
 
 <div id="profile-dialog" class="modal-dialog">
-	<div class="modal-content">
-		<div class="modal-header">
-			<h2 class="modal-title">Please register</h2>
-		</div>
-		<div class="modal-body">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2 class="modal-title">Please register</h2>
+        </div>
+        <div class="modal-body">
 
-			<p>This will allow you to submit problems and otherwise participate in the course. If you're not going to do the course at this time, feel free to cancel and logout.</p>
-			<div class="">
-				<label for="user_name">First and last name</label>
-				<%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
-			</div>
-			
-			<% if Schedule.where(self_register: true).count > 1 %>
-			<div class="">
-				<label>Your schedule</label>
+            <p>This will allow you to submit problems and otherwise participate in the course. If you're not going to do the course at this time, feel free to cancel and logout.</p>
 
-				<% Schedule.where(self_register: true).each do |schedule| %>
-				<div class="form-check">
-					<input type="radio" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
-					<label for="optionsRadios<%= schedule.id %>">
-						<%= schedule.description || schedule.name %>
-					</label>
-				</div>
-				<% end %>
-			</div>
-			<% elsif Schedule.count == 1 %>
-			<%= hidden_field_tag "user[schedule_id]", Schedule.first.id %>
-			<% end %>
-			
-		</div>
-		<div class="modal-footer">
-			<%= link_to 'Cancel', auth_session_logout_path, class: 'btn', data: { turbo: "false" } %>
-			<%= submit_tag 'Create Profile', class:'btn btn-primary' %>
-		</div>
-	</div>
+            <div class="">
+                <label for="user_name">First and last name</label>
+                <%= text_field_tag('user[name]', (current_user.name if current_user), required:true, class:'form-control', autofocus:true) %>
+            </div>
+
+            <% if @user %>
+            <%= @user.errors.full_messages.join "," %>
+            <% end %>
+
+            <% if Schedule.where(self_register: true).count > 1 %>
+            <div class="">
+                <label>Your schedule</label>
+
+                <% Schedule.where(self_register: true).each do |schedule| %>
+                <div class="form-check">
+                    <input type="radio" name="user[schedule_id]" required id="optionsRadios<%= schedule.id %>" value="<%= schedule.id %>" <%= 'checked' if current_user && current_user.schedule && current_user.schedule.id == schedule.id %>>
+                    <label for="optionsRadios<%= schedule.id %>">
+                        <%= schedule.description || schedule.name %>
+                    </label>
+                </div>
+                <% end %>
+            </div>
+            <% elsif Schedule.count == 1 %>
+            <%= hidden_field_tag "user[schedule_id]", Schedule.first.id %>
+            <% end %>
+
+        </div>
+        <div class="modal-footer">
+            <%= link_to 'Cancel', auth_session_logout_path, class: 'btn', data: { turbo: "false" } %>
+            <%= submit_tag 'Create Profile', class:'btn btn-primary' %>
+        </div>
+    </div>
 </div>
-
 
 <% end %>
