--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -239,6 +239,11 @@
 	padding:0;
 }
 
+#sidebar .nav + .nav
+{
+    margin-top: 1rem;
+}
+
 #sidebar a.disabled
 {
 	font-weight:600;
@@ -335,7 +340,7 @@
 
 #sidebar .materials a
 {
-	padding:0.4rem;
+	padding:0.5rem;
 	margin-left:-0.25rem;
 	margin-right:-0.25rem;
 }
