first registration sequence

--- a/app/views/auth/mail/code.html.erb
+++ b/app/views/auth/mail/code.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(auth_mail_validate_path, style: 'width: 400px', class: 'mx-auto mt-5 border rounded p-4') do |form| %>
+<%= form_tag(auth_mail_validate_path, style: 'width: 400px', class: 'mx-auto m-5 bg-light p-5 rounded shadow') do |form| %>
 
 <h1 class="h3 mb-3 fw-normal"><%= t('account.validation_code') %></h1>
 <p class=""><%= t('account.validation_code_in_mail') %></p>
